# fintech-schema-builder

./: README.md  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
src/schema_automation/: __init__.py  cli.py  config.py  models.py
src/schema_automation/extraction/: __init__.py  faqs.py  html.py  meta.py  text.py
src/schema_automation/infrastructure/: http.py  persistence.py
src/schema_automation/interfaces/: streamlit_app.py
src/schema_automation/schema/: __init__.py  builders.py
src/schema_automation/service/: workflow.py
